--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,4 @@
 include COPYING ChangeLog Makefile python-blivet.spec release_notes.rst
 recursive-include po *.mo *.po *.pot Makefile
 recursive-include examples *.py
+recursive-include tests *.py
